--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "Testing With Jest Framework",
   "private": true,
+  "jest":{
+    "testEnvironment": "jsdom"
+},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "start": "webpack serve --open",
     "server": "node server.js",
     "build": "webpack"
