--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "jest": {
     "collectCoverage": true,
     "verbose": true,
-    "reporters":["./node_modules/jest-html-reporter"],
+    "reporters": [
+      "./node_modules/jest-html-reporter"
+    ],
     "testEnvironment": "jsdom"
   },
   "scripts": {
@@ -39,6 +41,7 @@
     "hint": "^6.1.9",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.4.4",
+    "jest-cli": "^27.4.4",
     "jest-html-reporter": "^3.4.2",
     "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
